* fix MJPEG recording on zr36016/zr36050 cards. -d4 doesn't work,
* s/debug/zr_debug/ to fix symbol conflict for in-kernel code
* Add pci_disable_device() in card release function
* fix memleaks in i2c client error cases
* fix DC30 field order problem and +/- 64 lines noise at top
* fix DC30 quality (by Kieran Morrissey <linux@mgpenguin.net>)

Version 0.9.3 -> 0.9.4
----------------------
* Add YUY2 overlay (fullscreen/hardware-scaled)
* use __stringify() for array insmod options
* fix stupid flaw in open() logic (could result in oops)
* fix 2.5.x build
* remove lots of 'dead' includes from zoran_driver.c
* remove DataErr from the zr36060 IRQ Mask, this autoresets the chip when
    it loses sync, which means we don't get a timeout. Much better than
    all the manual restart handling (which only worked partly).
* introduce workaround for kfree-in-munmap-handler oops
* implement support for bitmaps rather than clips for overlay
* use try_module_get()/module_put() instead of MOD_INC/DEC_USE_COUNT
    in 2.5.x... Also implement i2c_driver->owner for all i2c clients

Version 0.9.2 -> 0.9.3
----------------------
* Fix missing check for channel < 0 in VIDIOCGCHAN (results in oops)

Version 0.9.1 -> 0.9.2
----------------------
* change default debug level 0 -> 1 ('display errors')
* add autodetect norm support to bt819
* fix all sort of lml33 problems
* changed zr->card into a non-pointer so its changeable per card entry
* add SECAM support to vpx3220
* add encoder=X/decoder=X insmod options to zoran.o (for varying cards
    such as the DC10old (mse3000/adv7175) and the DC30/DC30+ (vpx32xx))
* add "make release" feature to Makefile
* re-add some line that mysteriously got lost during VIDIOCGMBUF (fixes
    SIGFPE in xawtv)
* fix oops where semaphore wasn't down()'ed on v4l_fbuffer_free() -> double
    kfree() -> oops (please, use >= 2.4.20 only!)
* added linux/init.h everywhere for __devinit

Version 0.9.0 -> 0.9.1
----------------------
* Started ChangeLog